# Todo-API

./: .env_example  Makefile  README.md  pyproject.toml  ruff.toml
api/: models.py  permissions.py  routers.py  serializers.py  views.py
api/migrations/: 0001_initial.py
tests/: test_api.py
tests/fixtures/: tasks.json  users.json
todo/: settings.py  urls.py
